--- a/templates/clear_logo/template.css
+++ b/templates/clear_logo/template.css
@@ -446,7 +446,7 @@ td.clearall-result .warning-text {
   margin: 0 0 0.5em 0.5em;
 }
 
-.choice-5-pt-radio .answer li,.list-radio-flexible .answer li,.list-radio .answer li,.list-with-comment .answer li,.yes-no .answer li,.gender .answer li
+.choice-5-pt-radio .answer li,.list-radio-flexible .answer li,.yes-no .answer li,.gender .answer li
   {
   margin-left: 2em;
   text-indent: -1.8em;
@@ -506,6 +506,19 @@ p.question {
 .list-radio-flexible
 .list-radio
 */
+.list-radio .answer li label,
+.list-with-comment .answer li label {
+  display: inline-block;
+  width: 85%;
+}
+
+.list-radio .answer li input,
+.list-with-comment .answer li input {
+  vertical-align: top !important;
+  margin-top: 2px;
+  margin-top: -2px\9; /* IE9 and below */
+}
+
 ul.cols-2,table.cols-2,ul.cols-3,table.cols-3,ul.cols-4,table.cols-4,ul.cols-5,table.cols-5,ul.cols-6,table.cols-6,ul.cols-7,table.cols-7,ul.cols-8,table.cols-8
   {
   width: 98%;
@@ -590,6 +603,7 @@ ul.cols-8 li,ul.cols-8-ul,table.cols-8 td {
 .multiple-opt .answer li input {
   vertical-align: top !important;
   margin-top: 2px;
+  margin-top: -2px\9; /* IE9 and below */
 }
 
 .multiple-opt .answer li label {
