--- a/templates/default/template.css
+++ b/templates/default/template.css
@@ -717,14 +717,17 @@ table.clearall-result td {
 .list-radio-flexible
 .list-radio
 */
-.list-radio .answer li label {
+.list-radio .answer li label,
+.list-with-comment .answer li label {
   display: inline-block;
   width: 85%;
 }
 
-.list-radio .answer li input {
+.list-radio .answer li input,
+.list-with-comment .answer li input {
   vertical-align: top !important;
   margin-top: 2px;
+  *margin-top: -2px; /* IE7 and below */
 }
 
 ul.cols-2,table.cols-2,ul.cols-3,table.cols-3,ul.cols-4,table.cols-4,ul.cols-5,table.cols-5,ul.cols-6,table.cols-6,ul.cols-7,table.cols-7,ul.cols-8,table.cols-8
@@ -811,6 +814,7 @@ ul.cols-8 li,ul.cols-8-ul,table.cols-8 td {
 .multiple-opt .answer li input {
   vertical-align: top !important;
   margin-top: 2px;
+  *margin-top: -2px; /* IE7 and below */
 }
 
 .multiple-opt .answer li label {
