--- a/templates/mint_idea/template.css
+++ b/templates/mint_idea/template.css
@@ -677,8 +677,7 @@ select {
   margin: 0 0 0.5em 0.5em;
 }
 
-.choice-5-pt-radio .survey-question-answer li,.list-radio-flexible .survey-question-answer li,.list-radio .survey-question-answer li,.list-with-comment .survey-question-answer li
-  {
+.choice-5-pt-radio .survey-question-answer li,.list-radio-flexible .survey-question-answer li {
   margin-left: 2em;
   text-indent: -1.7em;
 }
@@ -742,6 +741,19 @@ select {
 .list-radio-flexible
 .list-radio
 */
+.list-radio .survey-question-answer li label,
+.list-with-comment .survey-question-answer li label {
+  display: inline-block;
+  width: 85%;
+}
+
+.list-radio .survey-question-answer li input,
+.list-with-comment .survey-question-answer li input {
+  vertical-align: top !important;
+  margin-top: 5px;
+  *margin-top: 2px; /* IE7and below */
+}
+
 ul.cols-2,table.cols-2,ul.cols-3,table.cols-3,ul.cols-4,table.cols-4,ul.cols-5,table.cols-5,ul.cols-6,table.cols-6,ul.cols-7,table.cols-7,ul.cols-8,table.cols-8
   {
   width: 98%;
@@ -833,7 +845,8 @@ table.rank td.helptext {
 */
 .multiple-opt .survey-question-answer li input {
   vertical-align: top !important;
-  margin-top: 2px;
+  margin-top: 5px;
+  *margin-top: 2px; /* IE7and below */
 }
 
 .multiple-opt .survey-question-answer li label {
