--- a/templates/sherpa/template.css
+++ b/templates/sherpa/template.css
@@ -515,8 +515,7 @@ table.question tr.array1:hover,table.question tr.array2:hover {
   margin: 0 0 0.5em 0.5em;
 }
 
-.choice-5-pt-radio .survey-question-answer li,.list-radio-flexible .survey-question-answer li,.list-radio .survey-question-answer li,.list-with-comment .survey-question-answer li
-  {
+.choice-5-pt-radio .survey-question-answer li,.list-radio-flexible .survey-question-answer li {
   margin-left: 2em;
   text-indent: -1.8em;
 }
@@ -585,6 +584,19 @@ table.question tr.array1:hover,table.question tr.array2:hover {
 .list-radio-flexible
 .list-radio
 */
+.list-radio .survey-question-answer li label,
+.list-with-comment .survey-question-answer li label {
+  display: inline-block;
+  width: 85%;
+}
+
+.list-radio .survey-question-answer li input,
+.list-with-comment .survey-question-answer li input {
+  vertical-align: top !important;
+  margin-top: 2px;
+  margin-top: -2px\9; /* IE9 and below */
+}
+
 ul.cols-2,table.cols-2,ul.cols-3,table.cols-3,ul.cols-4,table.cols-4,ul.cols-5,table.cols-5,ul.cols-6,table.cols-6,ul.cols-7,table.cols-7,ul.cols-8,table.cols-8
   {
   width: 98%;
@@ -684,6 +696,7 @@ table.rank td.helptext {
 .multiple-opt .survey-question-answer li input {
   vertical-align: top !important;
   margin-top: 2px;
+  margin-top: -2px\9; /* IE9 and below */
 }
 
 .multiple-opt .survey-question-answer li label {
